Optimized the painting for mouse drag, did the random colour and a standart start for when the page loads.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class='main'>
+    <main class='main'>
         <h1>ETCH-A-SKETCH!</h1>
         <div class='explanation'>
             <h2>Explanation:</h2>
@@ -22,15 +22,13 @@
             <button class='button' id='large'>64x64</button>
         </div>
         <div class='colors'>
-            <h3>Options:</h3>
-            <button class='button' id='colorPicker'>Color Picker</button>
+            <h3>Pick color:</h3>
+            <input class='button' type='color' id='color'>
             <button class='button' id='colorRandom'>Random</button>
-            <button class='button' id='colorEmpety'>Clear</button>
+            <button class='button' id='colorEmpty'>Clear</button>
         </div>
-        <div class='canvas'>
-            <!--add those divs here.-->
-        </div>
-    </div>
+        <div class='canvas'></div>
+    </main>
 </body>
 
 </html>
